Added Spinner,Visual feedback using notifier and About me page

--- a/find-team-mates/src/app/about-us/about-us.component.html
+++ b/find-team-mates/src/app/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="card">
   <img src="../../assets/PicsArt_07-10-12.51.02.jpg" alt="John" style="width:100%">
   <h1>Roshan Patel</h1>
@@ -6,4 +6,27 @@
   <p>Dalhousie University</p>
  
   <p><a  ata-toggle="tooltip" data-placement="right" title="Email" href="mailto: rs735202@dal.ca"><button>Contact</button></a></p>
+</div> -->
+
+<body >
+<div class="container">
+  <h1> Roshan Patel</h1>
+  <h2> MACS student Dalhousie University</h2>
+  <h2> Nova Scotia, Canada</h2>
+  <div class="image">
+    <img src="../../assets/PicsArt_07-10-12.51.02.jpg" class="rounded-circle"  alt="Photograph of me" width="250px" height="250px">
+  </div>
+  <p>
+ Find Team mates application will help the user to find the team mates and start a joureny of creating an exting project.The user can also share their project ideas and other user can join the project.So 
+ This platform helps the user to find team mates from around the world and connect with them.
+  </p>
+
+  <h2 class="mb-2">Technical Details</h2>
+  <p>
+    This web application is built using <span>Angular version 9.1.7</span> and <span>Spring boot version 2.3.0 </span>.I have used Angular for my front-end part and spring boot for my back-end part.Front-end part communicate with the back-end part using API. And each time<span>JWT token</span> is being passed with the request.
+  </p>
+  <a href="mailto:rs735202@dal.ca" class="btn"><i class="mr-1 fa fa-envelope" aria-hidden="true"></i>Mail me</a>
+  <a href="https://www.linkedin.com/in/roshan-patel-722125176/" class="btn"><i class="mr-1 fa fa-linkedin" aria-hidden="true"></i>My LinkedIn</a>
+   
 </div>
+</body>
