--- a/find-team-mates/src/app/all-projects/all-projects.component.html
+++ b/find-team-mates/src/app/all-projects/all-projects.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="alert-info alert mt-3 ml-3 mr-3 "  *ngIf="isError">Problem while fetching the project info. Please try agian later</div>
+<div class="container"  *ngIf="!isError">
   <div class="header">
     <h1 class="title display-2">List of all the projects</h1>
     <!-- <button class="btn rounded-pill" (click)=createOwnProject()>Create Your Own project</button> -->
