--- a/find-team-mates/src/app/home-page/home-page.component.html
+++ b/find-team-mates/src/app/home-page/home-page.component.html
@@ -12,7 +12,7 @@
 			<div class="main-heading">
 			<img src="../../assets/teammate.png" style="margin-bottom: 25px;" height="250px" width="250px">
 			<h1 class="display-3 heading">Find and join various IT Projects</h1>
-			<p class="lead ">This is a description for the first slide.</p>
+			<p class="lead ">Variety of project are posted.Find one that you line and reqiest to join.</p>
 		  </div>
 		</div>
 		<!-- Slide Two - Set the background image for this slide in the line below -->
@@ -20,7 +20,7 @@
 			<div class="main-heading">
 			<img src="https://image.flaticon.com/icons/svg/993/993515.svg" style="margin-bottom: 25px;" height="250px" width="250px">
 			<h1 class="display-3 heading">Create your own project</h1>
-			<p class="lead">This is a description for the second slide.</p>
+			<p class="lead">You have your own idea?Just share some description of project and make a team.</p>
 		  </div>
 		</div>
 		<!-- Slide Three - Set the background image for this slide in the line below -->
@@ -28,7 +28,7 @@
 			<div class="main-heading">
 			<img src="https://image.flaticon.com/icons/svg/3329/3329556.svg" style="margin-bottom: 25px;" height="250px" width="250px">
 			<h1 class="display-3 heading">Find Team mates from around the globe</h1>
-			<p class="lead">This is a description for the third slide.</p>
+			
 		  </div>
 		</div>
 	  </div>
@@ -73,3 +73,12 @@
 	<p>To be able to access all the feature of the application you need to register.Registration proceess is very simple and will not take much of your time.Once registered, you will be able to access all the feaature.</p>
 	<button class="btn register">Register</button>
 </div>
+
+<footer class="footer py-3 " style="background-color:#2E4053;">
+    <div class="container">
+      <div class="row align-items-center" style="display: flex;justify-content: space-between;">
+        <div class="col-lg-4 text-lg-left" style="color: white;">Copyright © Find Team mates 2020</div>
+        <a href="/aboutUs" style="text-decoration: none; color: white; border: 1px solid white; border-radius: 7px;" class="p-1">About Developer</a>
+      </div>
+    </div>
+  </footer>
