--- a/find-team-mates/src/app/pending-invitation/pending-invitation.component.css
+++ b/find-team-mates/src/app/pending-invitation/pending-invitation.component.css
@@ -17,3 +17,18 @@
 	color:  #2471A3;
 	font-size: 15px;
 }
+
+
+	.spinner-mat ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
+		stroke: #2E4053;
+	  }
+
+	  .dark-overlay{
+		background-color: rgba(0,0,0,0.7);
+		position: absolute; 
+		top:0;
+		left:0;
+		width: 100%;
+		min-height:805px;
+	}
+	
