--- a/find-team-mates/src/app/update-profile/update-profile.component.html
+++ b/find-team-mates/src/app/update-profile/update-profile.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <h1 class="title mt-3">Edit Profile</h1>
+    <h5 class="alert alert-warning">You may face some issue while updating the data.I am working on it.Sorry for inconvenience.</h5>
     <hr>
     <div class="row">
         <div class="col-md-12 min-vh-100">
@@ -53,9 +54,7 @@
                             <div class="col-lg-8">
                                 <input class="form-control" type="text" name="technology"
                                     [ngModel]="user_data[0].technology" required>
-                                <small class="text-muted">
-                                    Must be minimum 10 digits long.
-                                </small>
+                               
                             </div>
 
                         </div>
