--- a/find-team-mates/src/app/about-us/about-us.component.css
+++ b/find-team-mates/src/app/about-us/about-us.component.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
     margin: auto;
@@ -32,4 +32,82 @@
   
   button:hover, a:hover {
     opacity: 0.7;
-  }
+  } */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap');
+
+*{
+  margin: 0;
+  padding:0;
+  box-sizing: border-box;
+}
+html{
+  font-size: 5;
+}
+
+body{
+  background-color: #2E4053 !important;
+  background-position: 0 1000px;
+  font-family: 'Roboto',sans-serif;
+}
+
+.container{
+  
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0.3rem;
+ 
+  text-align: center;
+}
+
+h1{
+  color: #f6f6f6;
+  font-size: 1.5rem;
+  font-weight: 700;
+  letter-spacing: 5px;
+  margin-bottom: 0.5rem;
+}
+
+h2{
+  color: #dadada;
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+}
+
+.image{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+p{
+  font-size: 0.9rem;
+  color: #f6f6f6;
+  line-height:1.2rem ;
+  letter-spacing: 1.3px;
+  margin-bottom: 1rem;
+}
+
+.btn{
+  margin: 10px;
+  width: 150px;
+  display: inline-block;
+  padding: 0.7rem 1.0rem;
+  background: #f6f6f6;
+  font-size: 1rem;
+  text-decoration: none;
+  color: #2E4053;
+  border-radius: 10px;
+  transition: background 0.5s;
+}
+
+.btn:hover
+{
+  background:#dadada ;
+}
+
+span{
+  background-color: #2471A3;
+  border-radius: 10px;
+}
