--- a/find-team-mates/src/app/create-project/create-project.component.html
+++ b/find-team-mates/src/app/create-project/create-project.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <h1>{{messageData}}</h1>
+<div class="container mt-3">
+  <h3 *ngIf="messageData" class="alert alert-info">{{messageData}}</h3>
   <div class="row">
     <div class="col-md-12 d-flex flex-column justify-content-center">
       <div class="row">
