--- a/find-team-mates/src/app/login/login.component.html
+++ b/find-team-mates/src/app/login/login.component.html
@@ -1,17 +1,21 @@
+<div *ngIf="showSpinner" style="display: flex;align-content: center;justify-content: center; ">
+<mat-spinner></mat-spinner>
 
+</div>
 <div class="container">
     <div class="row">
         <div class="col-md-12 min-vh-70 d-flex flex-column justify-content-center">
             <div class="row">
                 <div class="col-lg-6 col-md-8 mx-auto">
-
+                    <!-- <span *ngIf="infoMessage.length > 0">{{ infoMessage }}</span> -->
+                    <h3 class="alert alert-success" *ngIf="infoMessage.length > 0">{{ infoMessage }}</h3>
                     <!-- form card login -->
                     <div class="card rounded shadow shadow-sm">
                         <div class="card-header">
                             <h1 class="title mb-0">Login</h1>
                         </div>
                         <div class="card-body"  >
-                            <h1 *ngIf="message" class="alert alert-info">{{message}}</h1>
+                            <h3 *ngIf="message" class="alert alert-info">{{message}}</h3>
                             <form class="form" role="form"  id="formLogin" #userForm="ngForm" >
                                 <div class="form-group">
                                     <label for="uname1">Email Id</label>
@@ -19,8 +23,6 @@
                                       [(ngModel)]="email" 
                                       type="text" 
                                       name="email" 
-                                     
-                                     
                                       required 
                                       placeholder="Enter a valid email address">
                                    
