--- a/find-team-mates/src/app/update-project-details/update-project-details.component.html
+++ b/find-team-mates/src/app/update-project-details/update-project-details.component.html
@@ -1,4 +1,8 @@
-<div class="container  mt-3 mb-3">
+<h3 *ngIf="errorMessage" class="mt-3 alert alert-info">{{errorMessage}}</h3>
+<h3 *ngIf="isError" class="alert alert-info mt-3">Error while loading the data.Please try agian.</h3>
+
+<div *ngIf="!isError"  class="container  mt-3 mb-3">
+
     <div class="row">
       <div class="col-md-12 d-flex flex-column justify-content-center">
         <div class="row">
