--- a/find-team-mates/src/app/update-project/update-project.component.html
+++ b/find-team-mates/src/app/update-project/update-project.component.html
@@ -1,5 +1,6 @@
-
-<div class="container">
+<h3 *ngIf="errorMessage" class="mt-3 alert-info alert">{{errorMessage}}</h3>
+<div class="container" *ngIf="!errorMessage">
+ 
 <h1 class="display-2 title mt-3">Your Created projects</h1>
 <div class="card" *ngFor="let data of project_data" style="margin-top: 20px;">
     <h3 class="card-header" >{{data.project_name}}</h3>
@@ -7,7 +8,7 @@
         <p class="sub-heading  m-0 p-0"><b>Project Description</b></p>
       <p class="card-text">{{data.project_description}}</p>
       <p class="sub-heading  m-0 p-0"><b>Expected project deadine</b></p>
-      <p>{{data.deadline}}</p>
+      <p>{{data.deadline| date:'yyyy-MM-dd'}}</p>
 
       <div style="float: right;" >
       <button  class="btn" (click)="onClickTOProjectDetails(data)" color="primary" style="margin-right: 15px;">Edit Details</button>
