Added content in home page

--- a/find-team-mates/src/app/home-page/home-page.component.html
+++ b/find-team-mates/src/app/home-page/home-page.component.html
@@ -49,8 +49,8 @@
 	  <div class="card">
 		<div class="card-body">
 		  <h1 class="card-title">Difficulty finding Team mates?</h1>
-		  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lobortis et odio in commodo. Nunc sollicitudin id felis et vestibulum. Vestibulum convallis arcu ac enim varius, non pulvinar ipsum scelerisque. Sed fringilla lacus quis purus fringilla, a porttitor nulla consequat</p>
-		  <a href="#" class="btn btn-primary">Go somewhere</a>
+		  <p class="card-text" style="padding: 10px;">There are times when we want to create a project but we are not able to find any good team mates.For example you know a specific fron-end technology and you want to find a team mates that know some back-end technology.You are at the right place!!You can see user's profile and ask them to join.</p>
+	
 		</div>
 	  </div>
 	</div>
@@ -58,8 +58,8 @@
 	  <div class="card">
 		<div class="card-body">
 		  <h1 class="card-title">Want to be a part of great project idea?</h1>
-		  <p class="card-text">Phasellus ut sem ut nulla tempus placerat. Suspendisse hendrerit euismod vulputate. Nullam turpis nunc, feugiat eget molestie quis</p>
-		  <a href="#" class="btn btn-primary">Go somewhere</a>
+		  <p class="card-text" style="padding: 10px;">You know many technology but not getting idea about how to use that technology and create an excellent project?.The websites allows you to see list of available project and you can request the team leader to join the project.But remember you profile does matter!!</p>
+	
 		</div>
 	  </div>
 	</div>
